[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/avatar.png" type="Texture" id=2]

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 80.0
margin_right = -100.0
margin_bottom = -80.0
script = ExtResource( 1 )
text = "Fuck! I really gotta get to that terminal before the whole module runs our of oxygen!"
avatarTexture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 280.0
margin_bottom = 110.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 260.0
margin_bottom = 90.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 66.0

[node name="Avatar" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 8.0
margin_right = 50.0
margin_bottom = 58.0
texture = ExtResource( 2 )
stretch_mode = 3

[node name="CenterContainer2" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 252.67
margin_bottom = 66.0

[node name="Line" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer2"]
margin_top = 9.0
margin_right = 198.67
margin_bottom = 57.0
rect_min_size = Vector2( 198.67, 0 )
text = "Fuck! I really gotta get to that terminal before the whole module runs our of oxygen!"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 260.0
margin_bottom = 90.0
alignment = 2

[node name="Button" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 230.0
margin_right = 260.0
margin_bottom = 20.0
text = "Ok"

[node name="dismissable_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="dismissable_timer" to="." method="_on_dismissable_timer_timeout"]
